[project]
name = "TRAYBOT"
version = "0.1.0"
description = "@trayvpn_bot"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.25.0",
    "numpy",
    "aiogram>=3.13.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "aiosqlite>=0.22.0",
    "pytz>=2025.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
